<resources>
    <string name="app_name">Personality </string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="Results"><u>Results</u></string>
    <string name="Extroversion">Extroversion</string>
    <string name="Agreeableness">Agreeableness</string>
    <string name="Conscientiousness">Conscientiousness</string>
    <string name="Neuroticism">Neuroticism</string>
    <string name="Openness">Openness</string>
    <string name="Extroversion_Desc">Low scorers tend to be shutins.\n\nHigh scorers who score high tend to be more outgoing and social.</string>
    <string name="Agreeableness_Desc">Low scorers tend to be more critical and aggressive.\n\nHigh scorers are more friendly and optimistic.</string>
    <string name="Conscientiousness_Desc">Low scorers are more impulsive and disorganized.\n\nHigh scorers are more careful and diligent.</string>
    <string name="Neuroticism_Desc">Low scorers are more emotionally stable.\n\n High scorers are less emotionally stable.</string>
    <string name="Openness_Desc">Low scorers tend to be traditional and conventional.\n\nHigh scorers tend to like novelty, fantasy, and are more likely to be intellectually curious.</string>
</resources>
